# quantum-research-hub

./: .env.example  .gitignore  .mcp.json  BUILD_WITH_CLAUDE_CODE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: architect.md  curator.md  dashboard-builder.md  experiment-builder.md  experiment-runner.md  idea-generator.md  mcp-server-engineer.md  paper-scout.md  paper-summarizer.md  reporter.md  test-engineer.md  validator.md
apps/dashboard/: Home.py  dashboard_lib.py  server.py
orchestrator/: __init__.py  agent_router.py  budget_manager.py  daily_run.py  reporting.py  scheduler.py  task_queue.py
orchestrator/agents/: __init__.py  base.py  experiment_builder.py  experiment_runner.py  idea_generator.py  paper_curator.py  paper_scout.py  paper_summarizer.py  research_reporter.py  validator_critic.py
quantum_research_hub_docs/: ARCHITECTURE.md  CLAUDE.md
researcher_mcp/: __init__.py  config.py  logging_utils.py  model_pass.py  server.py
researcher_mcp/indexing/: __init__.py  dataset_export.py  graph_store.py  pipeline.py  (+2 more)
scripts/: bootstrap.sh  dev.sh  install_schedule.sh  reset_dev_db.sh  run_daily.sh  run_tests.sh  run_weekly.sh  seed_demo.py  uninstall_schedule.sh
tests/: conftest.py  test_arxiv_client.py  test_batch_writer.py  test_budget_manager.py  test_concept_extractor.py  test_daily_run_smoke.py  test_dataset_export.py  test_db_init.py  test_experiment_creation.py  test_indexing_pipeline.py  test_mcp_tools_smoke.py  test_memory_search.py  test_model_pass.py  test_paper_card.py  test_term_miner.py  test_validator.py
(+83 files in other folders)
